--- a/main/webapp/style.css
+++ b/main/webapp/style.css
@@ -20,11 +20,11 @@
     text-decoration: none;
     margin-right: 10px;
   }
-  h1 {
+  .header h1 {
     margin-top: 0;
     text-align: center;
   }
-  h2 {
+  .header h2 {
       text-align: center;
       color: #333333;
   }
